aws/cloudwatch_alarm_and_slack/kubernetes_manifests/mysql-cli.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-cli
spec:
  containers:
  - name: create-testdb
    image: mysql:8.0
    command:
    - /bin/sh
    - -c
    - |
      sleep infinity
    # - |
    #   mysql -h $(MYSQL_HOST) -u $(MYSQL_USER) -p$(MYSQL_ROOT_PASSWORD) -e "CREATE DATABASE IF NOT EXISTS $(MYSQL_DATABASE);"
  restartPolicy: Never
